<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="iOS_Notes" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ncV-2p-NbX">
                                <rect key="frame" x="164.5" y="20" width="45.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uBf-kZ-1Ns">
                                <rect key="frame" x="16" y="45.5" width="283" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="newNoteInput"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4CA-iz-Eh2">
                                <rect key="frame" x="309" y="45.5" width="50" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="newNoteAddButton"/>
                                <state key="normal" title="Ajouter"/>
                                <connections>
                                    <action selector="addNote:" destination="BYZ-38-t0r" eventType="touchUpInside" id="j4F-JL-gaJ"/>
                                </connections>
                            </button>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Kbv-tE-P6P">
                                <rect key="frame" x="16" y="86" width="343" height="527"/>
                                <color key="backgroundColor" red="0.99607843139999996" green="0.94509803920000002" blue="0.71764705880000002" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="allNotes"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="1XS-Zl-eFe">
                                <rect key="frame" x="16" y="623" width="343" height="30"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yRg-0u-VJN">
                                        <rect key="frame" x="0.0" y="0.0" width="49" height="30"/>
                                        <color key="backgroundColor" red="0.99607843139999996" green="0.94509803920000002" blue="0.71764705880000002" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="color1Button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="4DV-oP-IGI"/>
                                        </constraints>
                                        <connections>
                                            <action selector="changeColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uJY-2K-vcd"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hyB-yt-8Yl">
                                        <rect key="frame" x="59" y="0.0" width="48.5" height="30"/>
                                        <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="color2Button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="0hT-B7-2HD"/>
                                        </constraints>
                                        <connections>
                                            <action selector="changeColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iqy-a7-I0Q"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s9Q-Pd-q5c">
                                        <rect key="frame" x="117.5" y="0.0" width="49" height="30"/>
                                        <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="color3Button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="Hwy-vM-gIT"/>
                                        </constraints>
                                        <connections>
                                            <action selector="changeColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Z7-XP-ZD5"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x7k-fK-N7M">
                                        <rect key="frame" x="176.5" y="0.0" width="49" height="30"/>
                                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="color4Button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="Z2s-Ar-yDJ"/>
                                        </constraints>
                                        <connections>
                                            <action selector="changeColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mB5-zj-fbx"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipG-o1-ZOL">
                                        <rect key="frame" x="235.5" y="0.0" width="48.5" height="30"/>
                                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="color5Button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="2DL-DQ-tEu"/>
                                        </constraints>
                                        <connections>
                                            <action selector="changeColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Im-II-2nf"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cFh-sh-pOh">
                                        <rect key="frame" x="294" y="0.0" width="49" height="30"/>
                                        <color key="backgroundColor" white="0.87111996644295298" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="color6Button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="7Xb-hm-9Ys"/>
                                        </constraints>
                                        <connections>
                                            <action selector="changeColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7ar-DN-pmp"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstAttribute="trailingMargin" secondItem="1XS-Zl-eFe" secondAttribute="trailing" id="2NY-rY-LvV"/>
                            <constraint firstItem="ncV-2p-NbX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4cQ-qq-3Ad"/>
                            <constraint firstAttribute="leadingMargin" secondItem="uBf-kZ-1Ns" secondAttribute="leading" id="5e5-jH-8o7"/>
                            <constraint firstItem="1XS-Zl-eFe" firstAttribute="top" secondItem="Kbv-tE-P6P" secondAttribute="bottom" constant="10" id="M4D-zN-6j0"/>
                            <constraint firstItem="4CA-iz-Eh2" firstAttribute="top" secondItem="ncV-2p-NbX" secondAttribute="bottom" constant="5" id="Ugx-G3-xeZ"/>
                            <constraint firstItem="Kbv-tE-P6P" firstAttribute="top" secondItem="uBf-kZ-1Ns" secondAttribute="bottom" constant="10" id="V3G-Wl-tbM"/>
                            <constraint firstAttribute="trailingMargin" secondItem="4CA-iz-Eh2" secondAttribute="trailing" id="goR-YY-lNF"/>
                            <constraint firstItem="4CA-iz-Eh2" firstAttribute="leading" secondItem="uBf-kZ-1Ns" secondAttribute="trailing" constant="10" id="h6r-ic-6op"/>
                            <constraint firstItem="ncV-2p-NbX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="mJ3-vi-PMQ"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1XS-Zl-eFe" secondAttribute="bottom" constant="14" id="nTe-vp-nIS"/>
                            <constraint firstItem="uBf-kZ-1Ns" firstAttribute="top" secondItem="4CA-iz-Eh2" secondAttribute="top" id="oRj-5b-YWr"/>
                            <constraint firstItem="Kbv-tE-P6P" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="qcK-PW-PRW"/>
                            <constraint firstAttribute="trailingMargin" secondItem="Kbv-tE-P6P" secondAttribute="trailing" id="vJh-Tk-LCh"/>
                            <constraint firstAttribute="leadingMargin" secondItem="1XS-Zl-eFe" secondAttribute="leading" id="w2K-ZF-rJj"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="textField" destination="uBf-kZ-1Ns" id="7Xs-nh-kLr"/>
                        <outlet property="textView" destination="Kbv-tE-P6P" id="JMM-SB-19d"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
</document>
